# Fract

./: CMakeLists.txt  README.md
fractal/: CMakeLists.txt  main.cpp
taskThree-fractal/: CMakeLists.txt
taskThree-fractal/src/: main.cpp
taskThree-test/src/: main.cpp
taskThree-window/include/taskThree/: window.hpp
taskThree-window/src/: window.cpp
test/: CMakeLists.txt  test.cpp
test/src/: main.cpp
window/: CMakeLists.txt  window.cpp  window.hpp
